# my_stm32_cmake_2

./: CMakeLists.txt
application/app1/: app1.h
application/main/: main.c
business/bus1/: bus1.c  bus1.h
document/: 构建编译系统.md
hardware/: CMakeLists.txt
hardware/mcu/arm/: CMakeLists.txt
rtos/freertos/: CMakeLists.txt
tool/cmake/: compile-flags.cmake  compile-mcu-def.cmake  compile-tool-chains.cmake
